display: Fix node alignment bugs

--- a/assets/nodestyle.css
+++ b/assets/nodestyle.css
@@ -1,25 +1,28 @@
 #svg-display .node-background {
     fill: #999;
-    rx: 10px;
-    ry: 10px;
+    rx: 8px;
+    ry: 8px;
     stroke: #000;
-    stroke-width: 4px;
+    stroke-width: 2px;
 }
 
 #svg-display .nonenode-background {
     fill: #555;
-    rx: 10px;
-    ry: 10px;
+    rx: 8px;
+    ry: 8px;
     stroke: #000;
-    stroke-width: 4px;
+    stroke-width: 2px;
 }
 
 #svg-display .node-type {
     font-weight: bold;
-    margin-left: 5%;
     font-size: 10px;
-    width: 90%;
-    height: 90%;
+    display: block;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
     background-color: #DDD;
     cursor: pointer;
 }
@@ -49,32 +52,32 @@
 /* Field backgrounds */
 #svg-display .string-value-background, #svg-display .stringArray-value-background {
     fill: #696;
-    rx: 10px;
-    ry: 10px;
+    rx: 5px;
+    ry: 5px;
     stroke: #000;
     stroke-width: 2px;
 }
 
 #svg-display .number-value-background, #svg-display .numberArray-value-background {
     fill: #669;
-    rx: 10px;
-    ry: 10px;
+    rx: 5px;
+    ry: 5px;
     stroke: #000;
     stroke-width: 2px;
 }
 
 #svg-display .boolean-value-background, #svg-display .booleanArray-value-background {
     fill: #966;
-    rx: 10px;
-    ry: 10px;
+    rx: 5px;
+    ry: 5px;
     stroke: #000;
     stroke-width: 2px;
 }
 
 #svg-display .node-value-background, #svg-display .nodeArray-value-background {
     fill: #999966;
-    rx: 10px;
-    ry: 10px;
+    rx: 5px;
+    ry: 5px;
     stroke: #000;
     stroke-width: 2px;
 }
@@ -88,22 +91,42 @@
 /* Field values */
 #svg-display .string-value {
     background-color: #DDD;
-    width: 90%;
+    display: block;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
 }
 
 #svg-display .number-value {
     background-color: #DDD;
-    width: 90%;
+    display: block;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
 }
 
 #svg-display .enum-value {
     background-color: #DDD;
-    width: 90%;
+    display: block;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
 }
 
 #svg-display .boolean-value {
     background-color: #DDD;
     cursor: pointer;
+    display: block;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    border: 0px;
 }
 
 #svg-display .connection {
